...
}

class _HomePageState extends State<HomePage> {
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('home_page'),
      body: StreamBuilder<UserEntity>(
          stream: getIt<UserService>().loadCurrentUser(),
          builder: (context, snapshot) {
            if (snapshot.hasData) {
              var listContacts = snapshot.data;
              return BlocProvider<HomeBloc>(
...
